test/testData/parser/negative/statements/continue.err
test/testData/parser/negative/statements/continue.c:3:5: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:3:11: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:3:16: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:3:22: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:3:26: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:3:34: error: 'continue' statement not in loop statement
